src/objects/BAR_Org_Institutional_Sales__c.object
<CustomObject>
    <description>To capture the sales &amp; asset data at the time the business at risk record is created. It also indicates the plans / portfolios that are deemed at risk.</description>
    <fields>
        <fullName>AUM_AUD__c</fullName>
        <label>AUM - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_CAD__c</fullName>
        <label>AUM - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_EUR__c</fullName>
        <label>AUM - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_GBP__c</fullName>
        <label>AUM - GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_JPY__c</fullName>
        <label>AUM - JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_SGD__c</fullName>
        <label>AUM - SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_USD__c</fullName>
        <label>AUM - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_at_Risk__c</fullName>
        <label>Business at Risk</label>
        <referenceTo>Business_at_Risk__c</referenceTo>
        <relationshipLabel>BAR Org Institutional Sales</relationshipLabel>
        <relationshipName>BAR_Org_Institutional_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Reporting_Currency_Code__c</fullName>
        <label>Client Reporting Currency Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <label>MDM_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BAR Org Institutional Sales</relationshipLabel>
        <relationshipName>BAR_Org_Institutional_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_At_Risk__c</fullName>
        <label>Percentage At Risk</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <label>Plan ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>BAR Org Institutional Sales</relationshipLabel>
        <relationshipName>BAR_Org_Institutional_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BAR Org Institutional Sales</relationshipLabel>
        <relationshipName>BAR_Org_Institutional_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_USD__c</fullName>
        <label>Prior Year Redemptions - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Currency__c</fullName>
        <label>User Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>BAR Org Institutional Sales</label>
    <nameField>
        <label>BAR Org Institutional Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BAR Org Institutional Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>